k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mockbin
  labels:
    app: mockbin
    app.kubernetes.io/name: mockbin
    app.kubernetes.io/component: api
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: mockbin-tls
    service.beta.openshift.io/serving-cert-secret-name: mockbin-tls
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
  selector:
    app: mockbin
