k8s/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mockbin
  labels:
    app: mockbin
    app.kubernetes.io/name: mockbin
    app.kubernetes.io/component: api
  annotations:
    haproxy.router.openshift.io/timeout: 60s
    haproxy.router.openshift.io/rate-limit-connections: "true"
    haproxy.router.openshift.io/rate-limit-connections.concurrent-tcp: "100"
    haproxy.router.openshift.io/rate-limit-connections.rate-tcp: "100"
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: mockbin
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
